<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorContainer"
    tools:context=".AddTransaction"
    tools:ignore="PrivateResource">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarAddTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTransactions"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            app:title="@string/add_transaction"
            app:navigationIcon="@drawable/ic_arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/transactionsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarAddTransaction">

        <RadioButton
            android:id="@+id/rbProfit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_dot"
            android:drawablePadding="8dp"
            android:drawableTint="@drawable/transactions_radio_icon"
            android:paddingHorizontal="24dp"
            android:text="@string/profit_singular"
            android:textColor="@drawable/transactions_radio_text"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rbExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_dot"
            android:drawablePadding="8dp"
            android:drawableTint="@drawable/transactions_radio_icon"
            android:paddingHorizontal="24dp"
            android:text="@string/expense_singular"
            android:textColor="@drawable/transactions_radio_text"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTransactionAmount"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/cipher"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="?attr/colorPrimaryVariant"
        app:boxStrokeColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionsRadioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTransactionAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/tilTransactionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/description"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="?attr/colorPrimaryVariant"
        app:boxStrokeColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTransactionAmount"
        app:startIconDrawable="@drawable/ic_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTransactionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="?attr/colorOnPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTransactionCategory"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/category"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="?attr/colorPrimaryVariant"
        app:boxStrokeColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTransactionDescription"
        app:startIconDrawable="@drawable/ic_category">

        <AutoCompleteTextView
            android:id="@+id/tvTransactionCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/tilTransactionDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/date"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="?attr/colorPrimaryVariant"
        app:boxStrokeColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTransactionCategory"
        app:startIconDrawable="@drawable/ic_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvTransactionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnTransactionsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:paddingLeft="30dp"
        android:paddingTop="12dp"
        android:paddingRight="30dp"
        android:paddingBottom="12dp"
        android:text="@string/save"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTransactionDate" />

</androidx.constraintlayout.widget.ConstraintLayout>